# SkiAdventure

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
code/: CMakeLists.txt  main.cpp  precomp.h
code/app/: app.cpp  app.h
code/common/: Angle.cpp  Angle.h  Curve.cpp  Curve.h  PhysicsEntity.cpp  PhysicsEntity.h  Rotator.cpp  Rotator.h  Timer.cpp  Timer.h  Vector.cpp  Vector.h  frame.cpp  frame.h  property_ids.h  readme.md  test.cpp
code/model/: Model.cpp  Model.h  Penguin.cpp  Penguin.h
code/view/: MainWindow.cpp  MainWindow.h  StartScreen.cpp  StartScreen.h
code/view/widgets/: GameBoard.cpp  GameBoard.h  MainWindow.cpp  MainWindow.h  StartScreen.cpp  StartScreen.h
code/viewmodel/: GameViewmodel.cpp  GameViewmodel.h  SpiritViewmodel.cpp  SpiritViewmodel.h
code/viewmodel/commands/: JumpCommand.cpp  NextStepCommands.cpp  StartCommand.cpp
